Report template implemented